[gd_scene load_steps=26 format=1]

[ext_resource path="res://Data/Levels/storage_room.gd" type="Script" id=1]
[ext_resource path="res://Data/Tiles/background.xml" type="TileSet" id=2]
[ext_resource path="res://Data/Tiles/dirt.xml" type="TileSet" id=3]
[ext_resource path="res://Faction.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Levels/enemy_faction.gd" type="Script" id=5]
[ext_resource path="res://Data/Tiles/cover/background.png" type="Texture" id=6]
[ext_resource path="res://health.gd" type="Script" id=7]
[ext_resource path="res://Data/Pickups/health_pack.png" type="Texture" id=8]
[ext_resource path="res://ammo.gd" type="Script" id=9]
[ext_resource path="res://Data/Pickups/ammo.png" type="Texture" id=10]
[ext_resource path="res://Data/Tiles/cover/bush.png" type="Texture" id=11]
[ext_resource path="res://breakable.gd" type="Script" id=12]
[ext_resource path="res://Data/Tiles/cover/rock.png" type="Texture" id=13]
[ext_resource path="res://zone.gd" type="Script" id=14]
[ext_resource path="res://ladder.gd" type="Script" id=15]
[ext_resource path="res://Data/Tiles/ladder.png" type="Texture" id=16]
[ext_resource path="res://Data/Levels/return.gd" type="Script" id=17]
[ext_resource path="res://Data/Tiles/cover/door.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 5, 3 )

[sub_resource type="CircleShape2D" id=12]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 310, 121.481 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=15]

custom_solver_bias = 0.0
extents = Vector2( 5, 11 )

[sub_resource type="RectangleShape2D" id=16]

custom_solver_bias = 0.0
extents = Vector2( 10, 20 )

[node name="small_storage_room" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="TileMap" parent="."]

z/z = -200
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 20, 20 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -720890, 0, -720889, 0, -720888, 0, -720887, 0, -720886, 0, -720885, 0, -720884, 0, -720883, 0, -720882, 0, -720881, 0, -655354, 0, -655353, 0, -655352, 0, -655351, 0, -655350, 0, -655349, 0, -655348, 0, -655347, 0, -655346, 0, -655345, 0, -589818, 0, -589817, 0, -589816, 0, -589815, 0, -589814, 0, -589813, 0, -589812, 0, -589811, 0, -589810, 0, -589809, 0, -524282, 0, -524281, 0, -524280, 0, -524279, 0, -524278, 0, -524277, 0, -524276, 0, -524275, 0, -524274, 0, -524273, 0, -458746, 0, -458745, 0, -458744, 0, -458743, 0, -458742, 0, -458741, 0, -458740, 0, -458739, 0, -458738, 0, -458737, 0, -393208, 0, -262156, 0, -262155, 0, -262154, 0, -262153, 0, -262152, 0, -262151, 0, -262150, 0, -262149, 0, -262148, 0, -262147, 0, -262146, 0, -262145, 0, -327680, 0, -327679, 0, -327678, 0, -327677, 0, -327676, 0, -327675, 0, -327674, 0, -327673, 0, -327672, 0, -327671, 0, -327670, 0, -327669, 0, -327668, 0, -327667, 0, -327666, 0, -327665, 0, -196620, 0, -196619, 0, -196618, 0, -196617, 0, -196616, 0, -196615, 0, -196614, 0, -196613, 0, -196612, 0, -196611, 0, -196610, 0, -196609, 0, -262144, 0, -262143, 0, -262142, 0, -262141, 0, -262140, 0, -262139, 0, -262138, 0, -262137, 0, -262136, 0, -262135, 0, -262134, 0, -262133, 0, -262132, 0, -262131, 0, -262130, 0, -262129, 0, -131084, 0, -131083, 0, -131082, 0, -131081, 0, -131080, 0, -131079, 0, -131078, 0, -131077, 0, -131076, 0, -131075, 0, -131074, 0, -131073, 0, -196608, 0, -196607, 0, -196606, 0, -196605, 0, -196604, 0, -196603, 0, -196602, 0, -196601, 0, -196600, 0, -196599, 0, -196598, 0, -196597, 0, -196596, 0, -196595, 0, -196594, 0, -196593, 0, -65548, 0, -65547, 0, -65546, 0, -65545, 0, -65544, 0, -65543, 0, -65542, 0, -65541, 0, -65540, 0, -65539, 0, -65538, 0, -65537, 0, -131072, 0, -131071, 0, -131070, 0, -131069, 0, -131068, 0, -131067, 0, -131066, 0, -131065, 0, -131064, 0, -131063, 0, -131062, 0, -131061, 0, -131060, 0, -131059, 0, -131058, 0, -131057, 0, -8, 0, -7, 0, -6, 0, -5, 0, -4, 0, -3, 0, -2, 0, -1, 0, -65536, 0, -65535, 0, -65534, 0, -65533, 0, -65532, 0, -65531, 0, -65530, 0, -65529, 0, -65528, 0, -65527, 0, -65526, 0, -65525, 0, -65524, 0, -65523, 0, -65522, 0, -65521, 0 )

[node name="TileMap" type="TileMap" parent="." groups=[
"inanimate",
]]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 20, 20 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 540673
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray( -786427, 1, -786426, 1, -786425, 1, -786424, 1, -786423, 1, -786422, 1, -786421, 1, -786420, 1, -786419, 1, -786418, 1, -786417, 1, -786416, 1, -720891, 1, -720880, 1, -655355, 1, -655344, 1, -589819, 1, -589808, 1, -524283, 1, -524272, 1, -458747, 1, -458736, 1, -327695, 1, -327694, 1, -327693, 1, -327692, 1, -327691, 1, -327690, 1, -327689, 1, -327688, 1, -327687, 1, -327686, 1, -327685, 1, -327684, 1, -327683, 1, -327682, 1, -327681, 1, -393216, 1, -393215, 1, -393214, 1, -393213, 1, -393212, 1, -393211, 1, -393210, 1, -393209, 1, -393207, 1, -393206, 1, -393205, 1, -393204, 1, -393203, 1, -393202, 1, -393201, 1, -393200, 1, -262159, 1, -327664, 1, -196623, 1, -262128, 1, -131087, 1, -196592, 1, -65551, 1, -131056, 1, -15, 1, -14, 1, -13, 1, -12, 1, -11, 1, -10, 1, -9, 1, -65520, 1, 65521, 1, 65522, 1, 65523, 1, 65524, 1, 65525, 1, 65526, 1, 65527, 1, 65528, 1, 65529, 1, 65530, 1, 65531, 1, 65532, 1, 65533, 1, 65534, 1, 65535, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1 )

[node name="Faction" parent="." instance=ExtResource( 4 )]

[node name="Enemy_faction" parent="." instance=ExtResource( 4 )]

script/script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -200
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 0 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]

transform/pos = Vector2( 590, 300 )
transform/scale = Vector2( 2, 2 )
z/z = -200
texture = ExtResource( 6 )

[node name="health" type="RigidBody2D" parent="." groups=[
"health",
]]

editor/display_folded = true
transform/pos = Vector2( 230, -50 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1024
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 7 )

[node name="body" type="Sprite" parent="health"]

texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="health"]

shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="ammo" type="RigidBody2D" parent="." groups=[
"ammo",
]]

editor/display_folded = true
transform/pos = Vector2( 200, -50 )
input/pickable = false
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1024
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 9 )

[node name="body" type="Sprite" parent="ammo"]

texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ammo"]

shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="cover" type="Node2D" parent="."]

editor/display_folded = true
visibility/opacity = 0.8
transform/pos = Vector2( -1278, -20 )

[node name="bush" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1040, -10 )

[node name="body" type="StaticBody2D" parent="cover/bush"]

z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 16384
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/bush/body"]

texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/bush/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="bush1" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1040, -30 )

[node name="body" type="StaticBody2D" parent="cover/bush1"]

z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 16384
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/bush1/body"]

texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/bush1/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="bush2" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1060, -10 )

[node name="body" type="StaticBody2D" parent="cover/bush2"]

z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 16384
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/bush2/body"]

texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/bush2/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="bush3" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1080, -10 )

[node name="body" type="StaticBody2D" parent="cover/bush3"]

z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 16384
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/bush3/body"]

texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/bush3/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="bush4" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1080, -30 )

[node name="body" type="StaticBody2D" parent="cover/bush4"]

z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 16384
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/bush4/body"]

texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/bush4/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="rock" type="Node2D" parent="cover"]

editor/display_folded = true
transform/pos = Vector2( 1098, -10 )
script/script = ExtResource( 12 )

[node name="body" type="StaticBody2D" parent="cover/rock"]

editor/display_folded = true
z/z = 100
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 540672
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="cover/rock/body"]

texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cover/rock/body"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="player_pos" type="Position2D" parent="."]

transform/pos = Vector2( -260, -20 )

[node name="enemy_start" type="Position2D" parent="."]

editor/display_folded = true

[node name="Position2D" type="Position2D" parent="enemy_start"]

transform/pos = Vector2( 110, 0 )

[node name="Area2D1" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.987805, 10, -120 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 6
script/script = ExtResource( 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D1"]

editor/display_folded = true
transform/pos = Vector2( 170, -110 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 65536
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/StaticBody2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="spawns" type="Node2D" parent="Area2D1"]

editor/display_folded = true

[node name="Position2D" type="Position2D" parent="Area2D1/spawns"]

transform/pos = Vector2( 250, -120 )

[node name="Position2D1" type="Position2D" parent="Area2D1/spawns"]

transform/pos = Vector2( 220, -120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1"]

transform/pos = Vector2( 10, -120 )
transform/scale = Vector2( 1, 0.987805 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="climbs" type="Node2D" parent="Area2D1"]

editor/display_folded = true

[node name="ladders1" type="Node2D" parent="Area2D1/climbs"]

editor/display_folded = true
transform/pos = Vector2( 170, 0 )

[node name="Ladder" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -10 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder"]

texture = ExtResource( 16 )

[node name="Ladder1" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -30 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder1"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder1"]

texture = ExtResource( 16 )

[node name="Ladder2" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -50 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder2"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder2"]

texture = ExtResource( 16 )

[node name="Ladder3" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -70 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder3"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder3"]

texture = ExtResource( 16 )

[node name="Ladder4" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -90 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder4"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder4"]

texture = ExtResource( 16 )

[node name="Ladder5" type="Area2D" parent="Area2D1/climbs/ladders1"]

editor/display_folded = true
transform/pos = Vector2( 0, -110 )
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 131072
script/script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1/climbs/ladders1/Ladder5"]

shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Area2D1/climbs/ladders1/Ladder5"]

texture = ExtResource( 16 )

[node name="drops" type="Position2D" parent="Area2D1"]

editor/display_folded = true

[node name="drops1" type="Position2D" parent="Area2D1/drops"]

transform/pos = Vector2( 170, -110 )

[node name="positions" type="Position2D" parent="Area2D1"]

editor/display_folded = true

[node name="Position2D" type="Position2D" parent="Area2D1/positions"]

transform/pos = Vector2( -200, -90 )

[node name="Position2D1" type="Position2D" parent="Area2D1/positions"]

transform/pos = Vector2( 290, -90 )

[node name="enters" type="Position2D" parent="Area2D1"]

[node name="resource_spawns" type="Position2D" parent="Area2D1"]

[node name="Position2D 2" type="Position2D" parent="Area2D1/resource_spawns"]

transform/pos = Vector2( 300, -140 )

[node name="Position2D" type="Position2D" parent="Area2D1/resource_spawns"]

transform/pos = Vector2( 290, -140 )

[node name="Position2D 3" type="Position2D" parent="Area2D1/resource_spawns"]

transform/pos = Vector2( 280, -140 )

[node name="711" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -260, -60 )
script/script = ExtResource( 17 )

[node name="Area2D" type="Area2D" parent="711"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="711/Area2D"]

shape = SubResource( 16 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="711/Area2D"]

transform/pos = Vector2( 0, 40 )

[node name="Sprite" type="Sprite" parent="711"]

transform/pos = Vector2( -20, -40 )
z/z = -100
texture = ExtResource( 18 )
centered = false


